add ability to read last configuration for last version of a service.